--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
+# OSX files
+.DS_Store
 
-# Android Studio captures folder
+# Android Studio
+.idea/
+.navigation/
 captures/
