--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
   <application
       android:allowBackup="true"
-      android:icon="@drawable/debug"
+      android:icon="@drawable/home"
       android:label="@string/app_name"
       android:supportsRtl="false"
       android:theme="@style/AppTheme">
@@ -25,6 +25,7 @@
     <activity
         android:name=".HomeActivity"
         android:clearTaskOnLaunch="true"
+        android:icon="@drawable/home"
         android:label="@string/home_name"
         android:launchMode="singleTask"
         android:screenOrientation="landscape"
