--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,24 @@
       </intent-filter>
     </activity>
 
+    <activity
+        android:name=".CompactHomeActivity"
+        android:clearTaskOnLaunch="true"
+        android:icon="@drawable/home"
+        android:label="@string/home_name_compact"
+        android:launchMode="singleTask"
+        android:screenOrientation="landscape"
+        android:stateNotNeeded="true"
+        android:theme="@style/AppTheme">
+      <intent-filter android:priority="11">
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+        <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
+        <category android:name="android.intent.category.HOME"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+      </intent-filter>
+    </activity>
+
     <receiver android:name=".BootReceiver">
       <intent-filter>
         <action android:name="android.intent.action.BOOT_COMPLETED"/>
