--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:leanback-v17:23.4.0'
-    compile 'com.github.scribejava:scribejava-apis:5.2.0-java7again'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:leanback-v17:23.4.0'
+    implementation 'com.github.scribejava:scribejava-apis:5.2.0-java7again'
 }
