--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:leanback-v17:23.4.0'
-    implementation 'com.github.scribejava:scribejava-apis:5.2.0-java7again'
+    implementation 'com.github.scribejava:scribejava-apis:5.5.0'
 }
